<resources>
    <string name="app_name">Blood factory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="list_of_blood_group">
        <item>--Select blood group--</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>A1+</item>
        <item>A1-</item>
        <item>A2+</item>
        <item>A2-</item>
        <item>A1B+</item>
        <item>A1B-</item>
        <item>A2B+</item>
        <item>A2B-</item>
        <item>Bombay blood group+</item>
        <item>INRA</item>
    </string-array>
    <string-array name="list_of_countries">
        <item>--Select country--</item>
        <item>India</item>
    </string-array>
    <string-array name="list_of_states">
        <item>--Select state--</item>
        <item>Andaman and Nicobar</item>
        <item>Andra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadar and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadeep</item>
        <item>Madhya pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="dummy_select">
        <item>--Select--</item>
    </string-array>
    <string-array name="list_of_cities">
        <item>--Select city--</item>
    </string-array>
    <string-array name="sikkim_cities">
        <item>--Select city--</item>
        <item>East District</item>
        <item>North District</item>
        <item>South District</item>
        <item>West District</item>
    </string-array>
    <string-array name="goa_cities">
        <item>--Select city--</item>
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
    <string-array name="tp_cities">
        <item>--Select city--</item>
        <item>Ariyalur</item>
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Cuddalore</item>
        <item>Dharmapuri</item>
        <item>Dindigul</item>
        <item>Erode</item>
        <item>Kanchipuram (Kancheepuram)</item>
        <item>Kanniyakumari (Kanyakumari)</item>
        <item>Karur</item>
        <item>Krishnagiri</item>
        <item>Madurai</item>
        <item>Nagapattinam</item>
        <item>Namakkal</item>
        <item>Perambalur</item>
        <item>Pudukkottai</item>
        <item>Ramanathapuram</item>
        <item>Salem</item>
        <item>Sivaganga</item>
        <item>Thanjavur</item>
        <item>Theni</item>
        <item>The Nilgiris</item>
        <item>Thiruvallur (Tiruvallur)</item>
        <item>Thiruvarur (Tiruvarur)</item>
        <item>Thoothukkudi</item>
        <item>Tiruchirappalli</item>
        <item>Tirunelveli</item>
        <item>Tiruppur</item>
        <item>Tiruvannamalai</item>
        <item>Vellore</item>
        <item>Viluppuram</item>
        <item>Virudhunagar</item>
    </string-array>
    <string-array name="tripura_cities">
        <item>--Select city--</item>
        <item>Dhalai</item>
        <item>North Tripura</item>
        <item>South Tripura</item>
        <item>West Tripura</item>
    </string-array>
    <string-array name="uttaranchal_cities">
        <item>--Select city--</item>
        <item>Almora</item>
        <item>Bageshwar</item>
        <item>Chamoli</item>
        <item>Champawat</item>
        <item>Dehradun</item>
        <item>Garhwal (PauriGarhwal)</item>
        <item>Hardwar (Haridwar)</item>
        <item>Nainital</item>
        <item>Pithoragarh</item>
        <item>Rudraprayag</item>
        <item>TehriGarhwal</item>
        <item>Udham Singh Nagar</item>
        <item>Uttarkashi</item>
        <item>Badrinathpuri</item>
        <item>Bahadarabad</item>
        <item>Bajpur (Bazpur)</item>
        <item>Banbasa</item>
        <item>Bandiya (Bandia)</item>
        <item>Bangherimahabatpur </item>
        <item>Barkot</item>
        <item>Bhagwanpur</item>
        <item>Bhimtal</item>
        <item>Bhowali</item>
        <item>Central Hope Town</item>
        <item>Chakrata</item>
        <item>Chamba</item>
        <item>ChamoliGopeshwar</item>
        <item>Clement Town</item>
        <item>Dehradun Cantonment</item>
        <item>Devaprayag</item>
        <item>Dhaluwala</item>
        <item>Dhandera</item>
        <item>Dharchula</item>
        <item>Didihat</item>
        <item>Dineshpur</item>
        <item>Dogadda</item>
        <item>Doiwala</item>
        <item>Dwarahat</item>
        <item>Gadarpur</item>
        <item>Gangotri</item>
        <item>Gochar (Gauchar)</item>
        <item>Gumaniwala</item>
        <item>Haldwani-cum-Kathgodam</item>
        <item>HaldwaniTalli</item>
        <item>Haripur Kalan</item>
        <item>Herbertpur</item>
        <item>Jagjeetpur</item>
        <item>Jaspur</item>
        <item>Jhabrera</item>
        <item>Jiwangarh</item>
        <item>Jonk</item>
        <item>Joshimath (Jyotirmath)</item>
        <item>Kaladhungi</item>
        <item>KanchalGosain</item>
        <item>Karnaprayag</item>
        <item>Kashipur</item>
        <item>Kashirampur</item>
        <item>Kedarnath</item>
        <item>KelaKhera</item>
        <item>Khanjarpur</item>
        <item>Kharakmafi</item>
        <item>Khatima</item>
        <item>Khatyari</item>
        <item>Kichha</item>
        <item>Kirtinagar</item>
        <item>Kotdwara (Kotdwar)</item>
        <item>Laksar</item>
        <item>Lalkuan</item>
        <item>Landaur (Landour)</item>
        <item>Landhaura</item>
        <item>Lansdowne</item>
        <item>Lohaghat</item>
        <item>Maholiya</item>
        <item>MahuaDabraHaripura</item>
        <item>MahuaKheraganj</item>
        <item>Manglaur</item>
        <item>MaohanpurMohammadpur</item>
        <item>MehuWalaMafi</item>
        <item>Mukhani</item>
        <item>Muni Ki Reti</item>
        <item>Mussoorie</item>
        <item>NagalaImarti</item>
        <item>Nagla</item>
        <item>Nandprayag (Nandaprayag)</item>
        <item>Narendranagar</item>
        <item>NatthanPur</item>
        <item>NatthuwaWala</item>
        <item>Padali Gujar</item>
        <item>PadampurSukhran</item>
        <item>Pauri</item>
        <item>PiranKaliyar</item>
        <item>Pithoragarh</item>
        <item>Pratitnagar</item>
        <item>Raipur</item>
        <item>Ramnagar</item>
        <item>Ranikhet</item>
        <item>RawaliMahdood</item>
        <item>Rishikesh</item>
        <item>Roorkee</item>
        <item>Rudrapur</item>
        <item>Saidpura</item>
        <item>SalempurRajputan</item>
        <item>Shafipur</item>
        <item>Shahpur</item>
        <item>Shaktigarh</item>
        <item>Sitarganj</item>
        <item>Srinagar</item>
        <item>Sultanpur</item>
        <item>Sunhaira</item>
        <item>Tanakpur</item>
        <item>Tehri</item>
        <item>UmruKhurd</item>
        <item>Vikasnagar</item>
        <item>Virbhadra</item>
    </string-array>
    <string-array name="up_cities">
        <item>--Select city--</item>
        <item>Agra</item>
        <item>Aligarh</item>
        <item>Allahabad</item>
        <item>Ambedkar Nagar</item>
        <item>Amroha (Jyotiba Phule Nagar)</item>
        <item>Auraiya</item>
        <item>Azamgarh</item>
        <item>Baghpat</item>
        <item>Bahraich</item>
        <item>Ballia</item>
        <item>Balrampur</item>
        <item>Banda</item>
        <item>Bara Banki</item>
        <item>Bareilly</item>
        <item>Basti</item>
        <item>Bijnor</item>
        <item>Budaun</item>
        <item>Bulandshahr</item>
        <item>Chandauli</item>
        <item>Chitrakoot</item>
        <item>Deoria</item>
        <item>Etah</item>
        <item>Etawah</item>
        <item>Faizabad</item>
        <item>Farrukhabad</item>
        <item>Fatehpur</item>
        <item>Firozabad</item>
        <item>Gautam Buddha Nagar</item>
        <item>Ghaziabad</item>
        <item>Ghazipur</item>
        <item>Gonda</item>
        <item>Gorakhpur</item>
        <item>Hamirpur</item>
        <item>Hardoi</item>
        <item>Hathras (Mahamaya Nagar)</item>
        <item>Jalaun</item>
        <item>Jaunpur</item>
        <item>Jhansi</item>
        <item>Kannauj</item>
        <item>Kanpur Dehat</item>
        <item>Kanpur Nagar</item>
        <item>Kasganj (Kanshiram Nagar)</item>
        <item>Kaushambi</item>
        <item>Kheri (Lakhimpur Kheri)</item>
        <item>Kushinagar</item>
        <item>Lalitpur</item>
        <item>Lucknow</item>
        <item>Mahoba</item>
        <item>Mahrajganj (Maharajganj)</item>
        <item>Mainpuri</item>
        <item>Mathura</item>
        <item>Mau</item>
        <item>Meerut</item>
        <item>Mirzapur</item>
        <item>Moradabad</item>
        <item>Muzaffarnagar</item>
        <item>Pilibhit</item>
        <item>Pratapgarh</item>
        <item>Rae Bareli</item>
        <item>Rampur</item>
        <item>Saharanpur</item>
        <item>Sant Kabir Nagar</item>
        <item>Sant Ravidas Nagar (Bhadohi)</item>
        <item>Shahjahanpur</item>
        <item>Shrawasti (Shravasti)</item>
        <item>Siddharthnagar</item>
        <item>Sitapur</item>
        <item>Sonbhadra</item>
        <item>Sultanpur</item>
        <item>Unnao</item>
        <item>Varanasi</item>
    </string-array>
    <string name="star_text">*</string>
    <string name="search_page_tagline">We will keep you happy</string>
    <string name="search_btn_text">Search now</string>
    <string name="user_info_title">Personal Information</string>
    <string name="user_info_attr1">Change Mobile Number</string>
    <string name="user_info_attr2">Edit Profile</string>
    <string name="sync_info_attr1">Enable Auto sync</string>
    <string name="sync_info_attr2">Sync interval</string>
    <string name="sync_info_title">Sync Information</string>
    <string name="notification_info_title">Notification</string>
    <string name="notification_info_attr1">Push notification</string>
    <string name="notification_info_attr2">Notification Ringtone</string>
    <string name="app_info_title">App Information</string>
    <string name="app_info_attr1">Version</string>
    <string name="app_info_attr2" >Developer</string>
    <string name="app_info_attr3">Purpose</string>
    <string name="user_info_attr3">Change Password</string>
</resources>