<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_distance"
            android:paddingRight="@dimen/medium_distance"
            android:paddingLeft="@dimen/medium_distance"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/circle_with_new_color"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/very_small_distance">
                    <ImageView
                        android:layout_width="@dimen/small_img_size"
                        android:layout_height="@dimen/small_img_size"
                        android:src="@drawable/find_blood"
                        android:clickable="false"/>
                </LinearLayout>
            </FrameLayout>
            <TextView
                android:text="@string/search_page_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/medium_text"
                android:gravity="center" />
            <View
                style="@style/white_separator"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blood_grp_error_layout"
            android:visibility="gone"
            style="@style/errorLayout">
            <TextView
                android:text="@string/star_text"
                style="@style/redStar"/>
            <TextView
                android:id="@+id/blood_grp_error"
                android:text=""
                style="@style/redStar"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/blood_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_medium_img_size"
            android:entries="@array/list_of_blood_group"
            style="@style/editText"
            android:background="@drawable/rectangle_border_edittext"/>
        <LinearLayout
            android:id="@+id/state_error_layout"
            android:visibility="gone"
            style="@style/errorLayout">
            <TextView
                android:text="@string/star_text"
                style="@style/redStar"/>
            <TextView
                android:id="@+id/state_error"
                android:text=""
                style="@style/redStar"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_medium_img_size"
            android:entries="@array/list_of_states"
            android:background="@drawable/rectangle_border_edittext"
            style="@style/editText"/>
        <LinearLayout
            android:id="@+id/city_error_layout"
            android:visibility="gone"
            style="@style/errorLayout">
            <TextView
                android:text="@string/star_text"
                style="@style/redStar"/>
            <TextView
                android:id="@+id/city_error"
                android:text=""
                style="@style/redStar"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_medium_img_size"
            android:entries="@array/list_of_cities"
            android:background="@drawable/rectangle_border_edittext"
            style="@style/editText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/medium_distance"
            android:layout_marginBottom="@dimen/medium_distance">
            <Button
                android:id="@+id/find_blood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/new_btn_color"
                android:text="@string/search_btn_text"
                android:layout_weight="1"
                style="@style/CommonButton"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

